# FakeReviewsDetector

./: .dockerignore  main.py  pyproject.toml
src/data_ingestion/: data_ingestion.py
src/utils/: exceptions.py  logger.py
