[project]
name = "fakereviewsdetector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "afinn>=0.1",
    "certifi>=2025.10.5",
    "matplotlib>=3.10.6",
    "nltk>=3.9.2",
    "numpy>=2.3.3",
    "optree==0.13.0",
    "pandas>=2.3.3",
    "pandasql>=0.7.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sqlalchemy==2.0.35",
    "statsmodels>=0.14.5",
    "textblob>=0.19.0",
    "textstat>=0.7.10",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.0",
    "wordcloud>=1.9.4",
]
